admin layout problems fixed

--- a/yahtzee/resources/css/adminStyle.css
+++ b/yahtzee/resources/css/adminStyle.css
@@ -39,10 +39,10 @@
     vertical-align: middle;
 }
 
-#search {
+/*#search {
     float: left;
     padding: 15px;
-}
+}*/
 
 div.headerText {
     margin: 0px;
@@ -84,8 +84,10 @@ h2 {
 }
 
 th {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #666666;
     color: #FFFFFF;
+    padding: 2px 5px 2px 5px;
 }
 
 td {
@@ -95,6 +97,7 @@ td {
     color: #ffffff;
     text-align: left;
     padding-left: 10px;
+    padding-right: 5px;
 }
 
 td.center {
